[package]
name = "napi-test"
version = "0.1.0"
authors = ["Julius de Bruijn <julius+github@nauk.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "1.6.1", default-features = false, features = ["napi4", "tokio_rt", "serde-json"] }
napi-derive = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
